<resources>
    <string name="app_name">ZhihuSpider</string>
    <string name="app_subTitle">A Jiangzi Project</string>
    <string name="sign_up_text">Don\'t have an account? Sign Up!</string>
    <string name="title_activity_splash">SplashActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main">知乎小报</string>

    <string name="openDrawer">OpenDrawer</string>
    <string name="closeDrawer">CloseDrawer</string>
    <string name="login_error_tittle">Oops! Login failed.</string>
    <string name="login_error_message">Your email or password is null, please check!</string>
    <string name="sign_up_error_title">Oops! SignUp failed</string>
    <string name="sign_up_error_message">\"Your input has empty area, please check! \"</string>
    <string name="remind_user_login_text">Please Login!</string>
    <string name="slide_header_text_favourite">收藏</string>
    <string name="slide_header_text_message">消息</string>
    <string name="slide_header_text_settings">设置</string>
    <string name="home_text">首页</string>
    <string name="title_activity_user_info">个人主页</string>
    <string name="action_settings">Settings</string>
    <string name="choose_photo_source_title">选择照片来源</string>
    <string name="external_storage_error">对不起！请检查你的外置存储</string>
    <string-array name="photo_source">
        <item>拍一张靓照</item>
        <item>从相册挑一张</item>
        <item>以后再说</item>
    </string-array>
    <string name="title_activity_story">StoryActivity</string>
    <string name="recommenders">推荐者</string>
    <string name="editors">主编</string>
    <string name="title_activity_comments">CommentsActivity</string>
    <string name="comments_count_suffix">条评论</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_long_comments_fragment">Hello long comments fragment</string>
    <string name="hello_short_comments_fragment">Hello short comments fragment</string>
    <string name="no_comments_place_holder_text">快来评论哦~</string>
    <string name="no_stories_place_holder_text">今天还没有故事哦，稍后刷新试试~</string>
    <string name="title_activity_calendar">CalendarActivity</string>
    <string name="title_activity_grid_stories">GridStoriesActivity</string>
    <string name="last_day_button_label">上一天</string>
    <string name="next_day_button_label">下一天</string>
    <string name="multipic_label">多图预警</string>
    <string name="title_activity_collection">CollectionActivity</string>
    <string name="my_collection">我的收藏</string>
    <string name="collection_dialog_title">删除</string>
    <string name="collection_dialog_message">确定要删除这条收藏？</string>
    <string name="dialog_ok">确定</string>
    <string name="dialog_cancel">取消</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="share_dialog_title">分享到</string>
    <string name="share_weibo">新浪微博</string>
    <string name="share_weChat_friendsOrCollect">微信好友或收藏</string>
    <string name="share_weChat_circle">微信朋友圈</string>
    <string name="share_pocket">Pocket</string>
    <string name="share_email">Email</string>
    <string name="share_other_platform">其他平台</string>
</resources>
