<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:layout_marginTop="15dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:id="@+id/weiboImage"
                android:src="@drawable/ic_action_shared"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/share_weibo"
                android:id="@+id/weiboText"
                android:textColor="@color/ColorPrimary"
                android:gravity="center_horizontal"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:id="@+id/wechatFriendsImage"
                android:src="@drawable/ic_action_shared"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/share_weChat_friends"
                android:id="@+id/wechatFriendsText"
                android:textColor="@color/ColorPrimary"
                android:gravity="center_horizontal"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:id="@+id/wechatCircleImage"
                android:src="@drawable/ic_action_shared"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/share_weChat_circle"
                android:id="@+id/wechatCircleText"
                android:textColor="@color/ColorPrimary"
                android:gravity="center_horizontal"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:id="@+id/emailImage"
                android:src="@drawable/ic_action_shared"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/share_email"
                android:id="@+id/emailText"
                android:textColor="@color/ColorPrimary"
                android:gravity="center_horizontal"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:id="@+id/pocketImage"
                android:src="@drawable/ic_action_shared"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/share_pocket"
                android:id="@+id/pocketText"
                android:textColor="@color/ColorPrimary"
                android:gravity="center_horizontal"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:id="@+id/otherPlatformImage"
                android:src="@drawable/ic_action_shared"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/share_other_platform"
                android:id="@+id/otherPlatformText"
                android:textColor="@color/ColorPrimary"
                android:gravity="center_horizontal"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>